# automatic_bin_picking

./: CMakeLists.txt  README.md  note.txt  package.xml
calibration/: example.txt  joint.yaml  sample.yaml
data_pcl/: Pawn.STL  Pawn.pcd  Realsense_box.STL  Realsense_box.pcd  box.STL  box.pcd  box_sample.pcd  complex.pcd  component - tesselated.pcd  component.pcd  object.pcd  pcl_view_0.pcd  pcl_view_4.pcd  pcl_view_x_.pcd  pcl_view_x_0.pcd  pcl_view_y_.pcd  pcl_view_y_0.pcd  scan_0.pcd  scan_1.pcd  scan_2.pcd  scan_3.pcd  scan_4.pcd  scan_5.pcd  scan_6.pcd  test_pcd.pcd  test_pcd_0.pcd  test_pcd_1.pcd
detect_cnn/: collect_data.py  detect.py
launch/: multi_scan.launch
result/: bin_corner.txt
src/: Calib_Coordinate.py  RegistrationPC.py  RegistrationPC_old.py  Robot_Setup.py  Scan_init_single_cam.py  bin_picking_platform.py  compare_result.py  exp2_pointing.py  exp3_compare_result.py  exp4_bin_picking.py  get_robot_joint.py  gripper.py  move_robot_service.py  object_position.txt  tes1.py  test.py  utils.py
srv/: MergePcl.srv  MoveMultipleView.srv  RecordPcl.srv  RotateMultipleView.srv
