<package format="2">
<name>auto_bin_picking</name>
<version>0.0.0</version>
<description>bin picking</description>
<maintainer email="hoanhtung2000nd@gmail.com">Tony Ho</maintainer>
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<export>
<!--  Other tools can request additional information be placed here  -->
</export>
</package>
